# OpenTournament

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DATABASE_FIXES_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  LICENSE  OPEN_TOURNAMENT_IMPLEMENTATION_ROADMAP.md  OpenTournament_Instructions.md  PROJECT_FILES.md  README.md  TIEBREAKER_SYSTEM_SPECIFICATION.md  TROUBLESHOOTING.md  build.bat  build.sh  build_instructions.md  build_packaging_specification.md  cmake_specification.md  data_models_specification.md  database_specification.md  development_plan.md  documentation_specification.md  export_specification.md  feature_enhancement_plan.md  leaderboard_specification.md  match_locking_specification.md  pairing_algorithm_specification.md  project_plan.md  project_summary.md  run_theme_tests.bat  test_build.bat  test_build.sh  testing_specification.md  tournament_reset_specification.md  ui_specification.md
src/: Database.cpp  Database.h  MainWindow.cpp  MainWindow.h  Match.cpp  Match.h  Player.cpp  Player.h  Settings.cpp  Settings.h  ThemeTest.cpp  ThemeTest.h  Tiebreaker.cpp  Tiebreaker.h  Tournament.cpp  Tournament.h  main.cpp
styles/: abyss.qss  custom.qss  dark_high_contrast.qss
